--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -3,12 +3,12 @@
    <form [formGroup]="productForm">
     <mat-form-field appearance="outline">
       <mat-label>Product Name</mat-label>
-      <input formControlName="productName" matInput placeholder="Placeholder">
+      <input formControlName="productName" matInput placeholder="Name">
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Product Category</mat-label>
-      <mat-select from ControlName= "category" placeholder=" Category">
+      <mat-select formControlName= "category" placeholder=" Category">
           <mat-option value="Fruits"> Fruits </mat-option>
           <mat-option value="Vegetables"> Vegetables </mat-option>
           <mat-option value="Electronics"> Electronics </mat-option>
@@ -17,27 +17,27 @@
 
     <mat-form-field appearance="outline">
           <mat-label>Choose a date </mat-label>
-          <input matInput [matDatepicker]="picker">
+          <input formControlName= "date" matInput [matDatepicker]="picker">
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
     </mat-form-field> 
     <label for=""><h1>Product Freshness</h1></label>
-    <mat-radio-group  class="example-radio-group">
+    <mat-radio-group formControlName= "freshness" class="example-radio-group">
       <mat-radio-button class="example-radio-button" *ngFor="let fresh of freshnessList" [value]="fresh">
         {{fresh}}
       </mat-radio-button>
     </mat-radio-group>
     <mat-form-field appearance="outline">
       <mat-label> Price</mat-label>
-      <input matInput type="number" placeholder="price" />
+      <input formControlName= "price" matInput type="number" placeholder="price" />
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Comment</mat-label>
-      <textarea matInput></textarea>
+      <textarea formControlName= "comment"matInput></textarea>
     </mat-form-field>
    </form>
 </div>
 
 <div mat-dialog-action [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>
-  <button style ="margin-left: 4px" mat-raised-button color="primary">Save</button>
+  <button style ="margin-left: 4px" mat-raised-button color="primary" (click)="addProduct()">Save</button>
