--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,10 +54,10 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let row"> 
-              <button mat-icon-button color="primary">
+              <button mat-icon-button (click)="editProduct(row)" color="primary">
                 <mat-icon>edit</mat-icon>
               </button> 
-              <button mat-icon-button color="warn">
+              <button (click)="deleteProduct(row.id)" mat-icon-button color="warn">
                 <mat-icon>delete</mat-icon>
               </button> 
             </td>
