--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -40,4 +40,4 @@
 
 <div mat-dialog-action [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>
-  <button style ="margin-left: 4px" mat-raised-button color="primary" (click)="addProduct()">Save</button>
+  <button style ="margin-left: 4px" mat-raised-button color="primary" (click)="addProduct()">{{actionBtn}}</button>
